@startuml

title __BANKICKMODULE's Class Diagram__\n

  namespace ModerationModule {
    namespace BanKickModule {
      class ModerationModule.BanKickModule.BanCommand {
          - helpText : String
          - perm : Permission
          + BanCommand()
          + execute()
          + getHelp()
          + getPerm()
      }
    }
  }
  

  namespace ModerationModule {
    namespace BanKickModule {
      class ModerationModule.BanKickModule.KickCommand {
          - helpText : String
          - perm : Permission
          + KickCommand()
          + execute()
          + getHelp()
          + getPerm()
      }
    }
  }
  

  namespace ModerationModule {
    namespace BanKickModule {
      class ModerationModule.BanKickModule.UnBanCommand {
          - helpText : String
          - perm : Permission
          + UnBanCommand()
          + execute()
          + getHelp()
          + getPerm()
      }
    }
  }
  

  ModerationModule.BanKickModule.BanCommand -up-|> ModerationModule.ModCommand
  ModerationModule.BanKickModule.KickCommand -up-|> ModerationModule.ModCommand
  ModerationModule.BanKickModule.UnBanCommand -up-|> ModerationModule.ModCommand


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
